Remove unimplemented code
